--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "security": "hardhat security",
     "audit": "npm audit",
     "build": "npm run compile && npm run typechain",
-    "dev": "npm run node & npm run deploy:local",
+    "dev": "next dev",
+    "dev:hardhat": "npm run node & npm run deploy:local",
+    "build:next": "next build",
+    "start:next": "next start",
     "ci": "npm run lint && npm run test && npm run build"
   },
   "keywords": [
@@ -60,7 +63,16 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
-    "ethers": "^6.8.0"
+    "ethers": "^6.8.0",
+    "@reown/appkit": "^1.0.0",
+    "@reown/appkit-adapter-wagmi": "^1.0.0",
+    "@reown/appkit-react": "^1.0.0",
+    "next": "^14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "wagmi": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "viem": "^2.0.0"
   },
   "engines": {
     "node": ">=16.0.0",
